[project]
name = "incontext"
version = "0.0.4"
description = "incontext but it's conversations with agents."
dependencies = [
	"flask",
	"pytest",
	"gunicorn",
	"openai",
	"anthropic",
	"google-genai",
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["incontext"]
